kubernetes.yaml
#
### Namespace
#
---
apiVersion: v1
kind: Namespace
metadata:
  name: $NAMESPACE

#
### postgres
#
---
apiVersion: v1
kind: Service
metadata:
  name: plausible-postgres
  namespace: $NAMESPACE
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: plausible
  ports:
    - name: db
      port: 5432
      targetPort: 5432
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plausible-postgres
  namespace: $NAMESPACE
spec:
  serviceName: plausible-postgres
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
      app.kubernetes.io/part-of: plausible
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
        app.kubernetes.io/part-of: plausible
    spec:
      restartPolicy: Always
      # https://github.com/docker-library/postgres/blob/ce5bf6e7eb8f339b2a8561bf8fb5fe5d4e8c96aa/14/alpine3.19/Dockerfile#L12
      securityContext:
        runAsUser: 70
        runAsGroup: 70
        fsGroup: 70
      containers:
        - name: plausible-postgres
          image: postgres:14
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: plausible-postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: plausible-postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi

#
### clickhouse
#
---
apiVersion: v1
kind: Service
metadata:
  name: plausible-clickhouse
  namespace: $NAMESPACE
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: clickhouse
    app.kubernetes.io/part-of: plausible
  ports:
    - name: db
      port: 8123
      targetPort: 8123
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plausible-clickhouse
  namespace: $NAMESPACE
spec:
  serviceName: plausible-clickhouse
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: clickhouse
      app.kubernetes.io/part-of: plausible
  template:
    metadata:
      labels:
        app.kubernetes.io/name: clickhouse
        app.kubernetes.io/part-of: plausible
    spec:
      restartPolicy: Always
      securityContext:
        # https://github.com/ClickHouse/ClickHouse/blob/master/docker/server/Dockerfile.alpine#L44
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
      containers:
        - name: plausible-clickhouse
          image: clickhouse/clickhouse-server:23-alpine
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: plausible-clickhouse-data
              mountPath: /var/lib/clickhouse
            - name: config
              mountPath: /etc/clickhouse-server/config.d/logging.xml
              subPath: clickhouse-config.xml
              readOnly: true
            - name: config
              mountPath: /etc/clickhouse-server/users.d/logging.xml
              subPath: clickhouse-user-config.xml
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: plausible-clickhouse
  volumeClaimTemplates:
    - metadata:
        name: plausible-clickhouse-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi

#
### plausible
#
---
apiVersion: v1
kind: Service
metadata:
  name: plausible
  namespace: $NAMESPACE
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: plausible
    app.kubernetes.io/part-of: plausible
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plausible
  namespace: $NAMESPACE
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - $MANAGED_DOMAIN
      secretName: plausible-tls-certificate
  rules:
    - host: $MANAGED_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plausible
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plausible
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: plausible
      app.kubernetes.io/part-of: plausible
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plausible
        app.kubernetes.io/part-of: plausible
    spec:
      restartPolicy: Always
      # see https://github.com/plausible/analytics/blob/master/Dockerfile
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: plausible
          image: plausible/analytics:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
